# -M-ster-UGR-Tratamiento-de-im-gen-m-dica

./: CMakeLists.txt  GausianFilter.cpp  README.md  Readme.md  neighborhoodFiltering.cpp
Lab01/Task 05/: CMakeLists.txt  MeanFilter.cpp  README.md
Lab01/Task01/: CMakeLists.txt  HelloWorld.cxx  README.md
Lab01/Task02/: CMakeLists.txt  README.md  showImage.cpp
Lab01/Task03/: CMakeLists.txt  ImageInformation.cpp  README.md
Lab01/Task04/: CMakeLists.txt  Iterator.cpp  README.md
Lab02/: README.md
Lab02/Task01/: CMakeLists.txt  README.md  linearFiltering.cpp
Lab02/Task02/: README.md
Lab02/Task03/: CMakeLists.txt  EdgePreserving.cpp  README.md
Lab02/Task04/: README.md
Lab03/: README.md
Lab03/Task01/: CMakeLists.txt  Gradient.cpp
Lab03/Task02/: CMakeLists.txt  README.md  Thresholding.cpp
Lab03/Task03/: CMakeLists.txt  EdgeDetection.cpp  README.md
Lab04/: README.md
Lab04/Exercise01/: CMakeLists.txt  MMB.cpp  README.md
Lab04/Task01/: CMakeLists.txt  README.md  Segmentacion.cpp
Lab04/Task02/: CMakeLists.txt  README.md  Watershed.cpp
Lab05/: README.md
Lab05/Excersice01/: CMakeLists.txt  Ex1.cxx  README.md
Lab05/Exercise02/: CMakeLists.txt  Ex2.cxx  README.md  Resultado.dcm
Lab05/Task01/: CMakeLists.txt  README.md  task01.cxx
Lab05/Task02/: BrainProtonDensity3Slices.vtk  CMakeLists.txt  README.md  task02.cxx
Lab05/Task03/: CMakeLists.txt  README.md  task03.cxx
Lab05/Task04/: CMakeLists.txt  README.md  task04.cxx
Lab05/Task05/: CMakeLists.txt  README.md  task05.cxx
Lab05/Task06/: CMakeLists.txt  README.md  (+1 more)
Lab06/: README.md
(+15 files in other folders)
